--- a/calculadora-index.html
+++ b/calculadora-index.html
@@ -12,7 +12,7 @@
         <h1>Guilherme de Souza</h1>
         <div class="calculadora">
             <h1>Calculadora</h1>
-            <p class="resultado"></p>
+            <p id="resultado"></p>
             <table>
                 <tr>
                     <td><button class="botao" onclick="clean()">C</button></td>
@@ -47,5 +47,6 @@
             </table>
         </div>
     </div>
+    <script src="script.js" defer></script>
 </body>
 </html>
